--- a/hacka-app/src/App.css
+++ b/hacka-app/src/App.css
@@ -9,18 +9,25 @@
 }
 
 .App-header {
-  background-color: rgb(36, 36, 36);
+  background-color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.menu {
+  overflow: hidden;
+  position: fixed;
+  padding-bottom: 1em;
+  bottom: 0;
+  width: 100%;
 }
 
 @keyframes App-logo-spin {
