--- a/hacka-app/src/screens/contatos/contatos.css
+++ b/hacka-app/src/screens/contatos/contatos.css
@@ -13,6 +13,7 @@
     flex: 1!important;
     flex-direction: row!important;
     justify-content: space-between!important;
+    padding-bottom: 0em!important;
 }
 
 .title{
