--- a/hacka-app/src/screens/contatos/contatos.css
+++ b/hacka-app/src/screens/contatos/contatos.css
@@ -14,6 +14,7 @@
     flex-direction: row!important;
     justify-content: space-between!important;
     padding-bottom: 0em!important;
+    font-size: 16px;
 }
 
 .title{
